--- a/components/Comment/index.module.scss
+++ b/components/Comment/index.module.scss
@@ -172,6 +172,8 @@
   & .emoji-wrapper {
     position: relative;
     width: 100%;
+    // for firefox
+    overflow: auto;
     overflow: overlay;
     display: flex;
     align-items: center;
